@@ -397,14 +397,14 @@ static int subdir_read(const char *path, char *buf, size_t size, off_t offset,
 	return err;
 }
 
-static int subdir_write(const char *path, const char *buf, size_t size,
+static int subdir_write_buf(const char *path, struct fuse_bufvec *buf,
 			off_t offset, struct fuse_file_info *fi)
 {
 	struct subdir *d = subdir_get();
 	char *newpath;
 	int err = subdir_addpath(d, path, &newpath);
 	if (!err) {
-		err = fuse_fs_write(d->next, newpath, buf, size, offset, fi);
+		err = fuse_fs_write_buf(d->next, newpath, buf, offset, fi);
 		free(newpath);
 	}
 	return err;
@@ -588,7 +588,7 @@ static struct fuse_operations subdir_oper = {
 	.create		= subdir_create,
 	.open		= subdir_open,
 	.read		= subdir_read,
-	.write		= subdir_write,
+	.write_buf	= subdir_write_buf,
 	.statfs		= subdir_statfs,
 	.flush		= subdir_flush,
 	.release	= subdir_release,
